infrastructure/kube-prometheus-stack/alertmanager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alertmanager
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "alertmanager.internal.mmontes.duckdns.org"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
