infrastructure/kube-prometheus-stack/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: traefik
      namespace: networking
  hostnames:
    - "grafana.mmontes.duckdns.org"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
