infrastructure/kube-prometheus-stack/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "prometheus.internal.mmontes.duckdns.org"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
